Use unmodifiableCollection in getters to eliminate array allocations